--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "react-scripts build && aws s3 sync build/ s3://cd.xmaslist.poc --delete && aws cloudfront create-invalidation --distribution-id=E2KTOR68EJI0TB --paths=/*"
   },
   "eslintConfig": {
     "extends": "react-app"
