Fix environment config files

--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-API_URL=https://r70a0wupc9.execute-api.eu-west-2.amazonaws.com/testing
+REACT_APP_API_URL=https://r70a0wupc9.execute-api.eu-west-2.amazonaws.com/testing
