--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.6.0",
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
+    "classnames": "^2.2.6",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "query-string": "^6.9.0",
