--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,8 @@ jobs:
     steps:
       - checkout
       - run: npm install
-      - run: sudo apt-get update && sudo apt-get install -y python-dev
+      - run: sudo apt-get update && sudo apt-get install -y python3.7
+      - run: sudo python --version
       - run: sudo curl -O https://bootstrap.pypa.io/get-pip.py
       - run: sudo python get-pip.py
       - run: sudo pip install awscli --upgrade
