--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - run: npm install
       - run: sudo apt-get update && sudo apt-get install -y python3
       - run: sudo python3 --version
-      - run: sudo curl -O https://bootstrap.pypa.io/get-pip.py
+      - run: sudo curl -O https://bootstrap.pypa.io/3.5/get-pip.py
       - run: sudo python3 get-pip.py
       - run: sudo pip install awscli --upgrade
       - run: aws --version
