Use new Auth0 tenant

--- a/src/auth_config.json
+++ b/src/auth_config.json
@@ -1,5 +1,5 @@
 {
-    "domain": "xmas-c7e.eu.auth0.com",
-    "clientId": "3w8S9kwuTMASuhM4wjGwrwlHueZCSIFQ",
-    "audience": "xmas-api"
+    "domain": "c7e.eu.auth0.com",
+    "clientId": "JulQgtfpy1dRUPhVrz3ooXvZJnIKNhl9",
+    "audience": "wishlist-api"
   }
