--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Christmas Wishlist",
-  "name": "Christmas Wishlist",
+  "short_name": "Wishlist",
+  "name": "Wishlist",
   "icons": [
     {
       "src": "favicon.ico",
