--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "query-string": "^6.9.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-linkify": "^1.0.0-alpha",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
