--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "classnames": "^2.2.6",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
-    "node-sass": "^4.0.0",
+    "node-sass": "~4.14.0",
     "query-string": "^6.9.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
