enable xmas theme

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,2 @@
 REACT_APP_API_URL=https://r70a0wupc9.execute-api.eu-west-2.amazonaws.com/testing
-REACT_APP_THEME=default
-#REACT_APP_THEME=xmas
+REACT_APP_THEME=xmas
