--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,6 @@
 version: 2
+orbs:
+  aws-cli: circleci/aws-cli@5.1.1
 jobs:
   build:
     docker:
@@ -6,11 +8,8 @@ jobs:
     steps:
       - checkout
       - run: npm install
-      - run: sudo apt-get update && sudo apt-get install -y python3
-      - run: sudo python3 --version
-      - run: sudo curl -O https://bootstrap.pypa.io/pip/3.5/get-pip.py
-      - run: sudo python3 get-pip.py
-      - run: sudo pip install awscli --upgrade
+      - aws-cli/setup:
+          profile_name: default
       - run: aws --version
       - run: aws s3 ls
       - run: npm run deploy
